@@ -28,6 +28,7 @@ Post-v2.12.0
        CVE-2019-14818, this DPDK version is strongly recommended to be used.
      * Add hardware offload support for output, drop, set of MAC, IPv4,
        TCP/UDP ports and tunnel push-output/pop actions (experimental).
+     * Add hardware offload support VXLAN vports.
 
 v2.12.0 - 03 Sep 2019
 ---------------------
